Được tạo bằng Colab

--- a/latent_space.ipynb
+++ b/latent_space.ipynb
@@ -715,6 +715,48 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import json\n",
+        "from IPython.display import display, Javascript\n",
+        "\n",
+        "# Xóa metadata.widgets\n",
+        "display(Javascript(\"\"\"\n",
+        "require(['base/js/namespace'], function(Jupyter) {\n",
+        "    delete Jupyter.notebook.metadata.widgets;\n",
+        "    Jupyter.notebook.save_checkpoint();\n",
+        "});\n",
+        "\"\"\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "LQvnABXh9-Wb",
+        "outputId": "d2ee1da1-7cd5-4a45-8313-811c2f5a2c01"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "require(['base/js/namespace'], function(Jupyter) {\n",
+              "    delete Jupyter.notebook.metadata.widgets;\n",
+              "    Jupyter.notebook.save_checkpoint();\n",
+              "});\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "8HzmWnMAjem0",
